# conan-recipes

./: .gitignore  .travis.yml  README.md
.github/workflows/: build.yml
Samples/ZLIB/CMakeTxt/: CMakeLists.txt  README.md  conanfile.txt
assimp/: README.md  conandata.yml  conanfile.py
assimp/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
assimp/test_package_0/: conanfile.py
bzip2/patches/: BZip2Config.cmake.in
bzip2/test_package/: conanfile.py  test_package.cpp
bzip2/test_package_1/: CMakeLists.txt
conan-assimp/: CMakeLists.txt  conandata.yml  conanfile.py
conan-assimp/test_package/: conanfile.py
conan-assimp/test_package_0/: CMakeLists.txt  conanfile.py
conan-boost/: README.md  conanfile.py
conan-boost/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
conan-boost/test_package_0/: CMakeLists.txt
conan-bzip2/: README.md  conandata.yml  conanfile.py
conan-bzip2/patches/: CMakeLists.txt
conan-bzip2/test_package/: CMakeLists.txt  conanfile.py
conan-bzip2/test_package_0/: CMakeLists.txt  conanfile.py
conan-freetype/: README.md  conandata.yml  conanfile.py
conan-freetype/patches/: CMakeLists.txt
conan-freetype/test_package/: CMakeLists.txt  conanfile.py
conan-freetype/test_package_0/: CMakeLists.txt  conanfile.py
conan-glew/: README.md  conandata.yml  conanfile.py
conan-glew/patches/: CMakeLists.txt
conan-glew/test_package/: CMakeLists.txt
conan-glew/test_package_0/: CMakeLists.txt
conan-glfw/: conandata.yml  conanfile.py
conan-glfw/test_package/: CMakeLists.txt  test_package.cpp
conan-glfw/test_package_0/: CMakeLists.txt
conan-glm/: .gitignore  README.md  conanfile.py
conan-glm/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
conan-glm/test_package_0/: CMakeLists.txt
conan-imath/: conandata.yml  conanfile.py
conan-imath/test_package/: CMakeLists.txt  conanfile.py
conan-imath/test_package_0/: conanfile.py
conan-irrxml/: README.md  conanfile.py
conan-irrxml/patches/: IrrXMLConfig.cmake.in
conan-irrxml/test_package/: CMakeLists.txt  conanfile.py
conan-irrxml/test_package_0/: conanfile.py
conan-libpng/: CMakeLists.txt  README.md  conandata.yml  conanfile.py
conan-libpng/patches/: CMakeLists.txt  CMakeLists.txt.patch
conan-libpng/test_package/: CMakeLists.txt  conanfile.py
conan-libpng/test_package_0/: CMakeLists.txt  conanfile.py
conan-libusb/: README.md  conandata.yml  conanfile.py
conan-libusb/test_package/: CMakeLists.txt  test_package.cpp
conan-libusb/test_package_0/: conanfile.py
conan-midifile/: README.md  conanfile.py
conan-midifile/patches/: CMakeLists-0.2.txt.patch  CMakeLists.txt.patch
conan-midifile/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
conan-midifile/test_package_0/: CMakeLists.txt
conan-ogre/: README.md  conandata.yml  conanfile.py
conan-ogre/patches/: CMakeLists.txt
conan-ogre/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
conan-ogre/test_package_0/: conanfile.py
conan-opencv/: CMakeLists.txt  README.md  conandata.yml  conanfile.py
conan-opencv/test_package/: CMakeLists.txt  conanfile.py
conan-opencv/test_package_0/: conanfile.py
conan-openexr/: CMakeLists.txt  README.md  conandata.yml  conanfile.py
conan-openexr/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
conan-openexr/test_package_0/: CMakeLists.txt  conanfile.py
conan-protobuf/: CMakeLists.txt  conandata.yml  conanfile.py
conan-protobuf/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
conan-protobuf/test_package_0/: conanfile.py
conan-pugixml/: README.md  conandata.yml  conanfile.py
conan-pugixml/test_package/: CMakeLists.txt  conanfile.py  example.xml  test_package.cpp
conan-pugixml/test_package_0/: CMakeLists.txt  conanfile.py
conan-soil/: README.md  conanfile.py
conan-soil/patches/: CMakeLists.txt  SOILConfig.cmake.in
conan-soil/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
conan-soil/test_package_0/: CMakeLists.txt  conanfile.py
conan-soil2/: README.md  conandata.yml  conanfile.py
conan-soil2/patches/: CMakeLists-1.07.txt  CMakeLists-1.08.txt  CMakeLists-1.09.txt  CMakeLists-1.10.txt  CMakeLists-1.11.txt  CMakeLists-1.20.txt  CMakeLists.txt
conan-soil2/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
conan-soil2/test_package_0/: CMakeLists.txt  conanfile.py
conan-zlib/: README.md  conandata.yml  conanfile.py
conan-zlib/patches/: CMakeLists.txt.patch
conan-zlib/test_package/: CMakeLists.txt  conanfile.py
conan-zlib/test_package_0/: conanfile.py
conan-zzip/: CMakeLists.txt  README.md  conandata.yml  conanfile.py
conan-zzip/patches/: CMakeLists.txt  WrappedCMakeLists.txt  _config.h.cmake
conan-zzip/test_package/: CMakeLists.txt  test_package.cpp
conan-zzip/test_package_0/: CMakeLists.txt  conanfile.py
freetype/: CMakeLists.txt  README.md  conanfile.py
freetype/test_package/: CMakeLists.txt
freetype/test_package_0/: conanfile.py
freetype/test_package_1/: CMakeLists.txt  test_package.cpp
glew/: conanfile.py
glew/test_package/: test_package.cpp
glew/test_package_1/: CMakeLists.txt
glfw/: README.md  conanfile.py
glfw/test_package/: CMakeLists.txt
glfw/test_package_1/: CMakeLists.txt
glm/: conandata.yml  conanfile.py
imath/: README.md  conanfile.py
imath/test_package/: conanfile.py  test_package.cpp
imath/test_package_1/: CMakeLists.txt
irrxml/: conandata.yml
irrxml/patches/: CMakeLists.txt  irrTypes.h.patch
irrxml/test_package_1/: CMakeLists.txt
libpng/: README.md
libpng/patches/: CMakeLists-1.6.31.txt.patch
libpng/test_package/: CMakeLists.txt  test_package.cpp
libusb/: conanfile.py
midifile/: conandata.yml  conanfile.py
ogre/: CMakeLists.txt  conanfile.py
ogre/test_package/: CMakeLists.txt  (+1 more)
opencv/: conanfile.py
openexr/: conanfile.py
openexr/test_package_1/: CMakeLists.txt  conanfile.py
protobuf/: README.md  conanfile.py
pugixml/: conanfile.py
pugixml/test_package_1/: CMakeLists.txt
soil2/: conandata.yml  conanfile.py
zlib/: conanfile.py
zzip/: README.md  conanfile.py
(+30 files in other folders)
